# concepts

./: 2025-03_data_json_builder.py  2025-03_ollama_benchmark.py  2025-04_network_simulator.py  2025-04_video_processing.py  2025-05_file_type_counter.py  2025-08_genai_use_case_eval.py  2025-09_git_delta_checker.py  2026-05_window_tiler_3mon_2x2.py  2026-06_overlay_captions.example.json  2026-06_overlay_captions.py  agent_task_swap.py  auth_test.py  claude-task-launcher-safe.ps1.txt  claude-task-launcher.ps1.txt  export.bas  folder_time_compare.py  fz-layout-guard.ps1.txt  grabber.py  graph_layout.py  graph_layout_packed.py  review_test.py  run-claude.cmd.txt  test_review.py
ai-usage-monitor/: README.md  scraper.py  setup.sh  setup_ai_usage_monitor.py
color-scheme-1-sapphire-dusk/: README.md  example.html  sapphire-dusk-tokens.css
color-scheme-2-moss-tidal/: README.md  demo.html  secondary-colors.json
color-scheme-3-slate-citrus/: README.md  demo.html
color-scheme-4-orchid-sunset/: README.md  demo.html  theme.css
color-scheme-5-nebula-spark/: README.md  preview.html
color-scheme-five/: README.md  preview.html  tokens.css  tokens.json
color-scheme-five-nebula-spark/: README.md  preview.html  tokens.json
color-scheme-one/: README.md  tokens.json  (+3 more)
tasks-mcp/: .gitignore  README.md  pyproject.toml  refresh_service.py  run_http.py  tasks_mcp_service.py
tasks-mcp/config/: allowed_prefixes.yaml
tasks-mcp/tasks_mcp/: __init__.py  config.py  indexer.py  integrity.py  markdown_store.py  models.py  server.py
tasks-mcp/tests/: test_integrity.py  test_tasks_mcp.py
(+110 files in other folders)
